Remove products, add thanks message

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,135 +1,68 @@
 <div class="row marketing col-md-12 rowCountdown">
-    <div class="col-md-12">
-    <h4 class="centered bold">It's here!</h4>
-    At last, here is the opportunity to buy a box for your Didsbury Beer
-    Festival at Home, to drink at a safe distance or perhaps with friends on a
-    zoom meeting.
-    <br /><br />
-    <h4 class="centered bold">What’s in the box?</h4>
-    </div>
-    <div class="col-md-4">
-    <img
-        class="optionImage"
-        src="images/dbfHomeOption1.jpeg"
-    />
-    </div>
-    <br />
-    <div class="col-md-8">
-    <span class="indent">
-        <span class="optionText"
-        ><span class="bold">Option1:</span> 2 beers and a glass for
-        £12</span
-        >
-        <br />
-        <span class="indent">
-        &bull;&nbsp;&nbsp;The special 2020 festival glass (pint only)<br />
-        &bull;&nbsp;&nbsp;A Bottle of the traditional festival ale (4%)<br />
-        &bull;&nbsp;&nbsp;A special bottle of 4.1% blond ale (Teresa’s
-        Tipple) to celebrate Teresa Seneviratne, who died earlier this year.
-        She was a founder of the festival and involved in the planning of
-        the first one in 2008. <br />
-        </span>
-        <br />
-        <br />
-    </span>
-    </div>
-    <div class="col-md-4">
-    <img class="optionImage"src="images/dbfHomeOption2.png" />
-    <br />
-    </div>
-    <div class="col-md-8">
-    <br />
-    <span class="indent">
-        <span class="optionText">
-        <span class="bold">Option 2:</span> 5 beers and a glass for
-        £22</span
-        >
-        <br />
-        This bigger box includes the above plus 3 extra beers from local
-        breweries:
-        <br />
-        <span class="indent">
-        &bull; Thirst Class - American Pale Ale 5.3%<br />
-        &bull; Bollington – Oatmeal Stout 5.0%<br />
-        &bull; Track. – Sonoma 3.8%<br />
-        </span>
-    </span>
-    </div>
-    <br />
-    <br />
-    <br />
-    <div class="col-md-12">
-    <h4 class="centered bold">How to order</h4>
-    <p class="bold">
-        STOP PRESS. WOW!  We are bowled over by the demand for these products.  These boxes with the Special Beers have nearly all gone.  
-        <br/><br/>
-        Fortunately we do still have some glasses left so we can also offer 2 other options 
-        <br/><br/>
-        Option 1a: 2 beers from local breweries and a 2020 Festival glass  £12
-        <br/>
-        Option 2a:  5 beers from local breweries and a 2020 Festival glass  £22
-        <br/>
-        </p>
-    Order online by clicking one of the links below and then collect your order on
-    7th or 14th November from St Catherine’s Community Centre (the home of the
-    Didsbury Beer Festival).
-    <br /><br />
-    There is very <span class="bold">limited</span> stock so you will need to be quick.
-    <br /><br />
-    The Didsbury Beer Festival has always supported local good causes. This
-    year all the profit will be supporting those most in need by donating to
-    local food banks - Chorlton and Didsbury Foodbank
-    (<a href="https://chorltondidsbury.foodbank.org.uk/">https://chorltondidsbury.foodbank.org.uk/</a>"). There is also an option to
-    make an additional donation when placing your order.
-    <br /><br />
-    Sales are strictly for over 18s and proof of age will be required on
-    collection
-    <br /><br /><br />
-    <div id='collection-component-1602963986272'></div>
-  <h4 class="centered bold">Contact us</h4>
-  <p>
-    For all general enquiries, please email
-    <a href="mailto:emaildbf@gmail.com">emaildbf@gmail.com</a>
-  </p>
-</div>
-<div class="row marketing col-md-12" style="padding: 5px; text-align: center">
-  <twitter-widget>
-    <a
-      class="twitter-timeline"
-      data-width="300"
-      data-height="350"
-      data-theme="light"
-      href="https://twitter.com/dbf_beer?ref_src=twsrc%5Etfw"
-      >Tweets by dbf_beer</a
-    >
-    <script
-      async
-      src="https://platform.twitter.com/widgets.js"
-      charset="utf-8"
-    ></script>
-  </twitter-widget>
-  <h4>
-    Press
-    <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"
-      ><i class="fas fa-video"></i
-    ></a>
-    to watch our video, or check out our social offerings
-  </h4>
-  <p style="font-size: 30px">
-    <a href="https://twitter.com/dbf_beer"><i class="fab fa-twitter"></i></a>
-    <a
-      href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"
-      ><i class="fab fa-facebook-f"></i
-    ></a>
-    <a href="https://www.instagram.com/didsburybeerfestival/"
-      ><i class="fab fa-instagram"></i
-    ></a>
-    <a href="http://www.flickr.com/photos/65526946@N08/"
-      ><i class="fab fa-flickr"></i
-    ></a>
-    <a href="http://www.youtube.com/user/Didsburybeerfestival"
-      ><i class="fab fa-youtube"></i
-    ></a>
-  </p>
-</div>
+  <div class="col-md-12">
+    <h4 class="centered bold">Thank You</h4>
+    <p class="centered">
+      Thank you for supporting the Didsbury Beer Festival at Home.
+      <br /><br />
+      All the beer boxes have now sold out. We are sorry if you have been
+      disappointed and not managed to purchase one.
+      <br /><br />
+      We will be preparing the packs over the next week so that they will be
+      ready for collection from St Catherine’s Community Centre, School Lane,
+      Didsbury, M20 6HS between 11am and 4pm on Saturday 7th November and
+      Saturday 14th November.
+      <br /><br />
+      We are grateful to those who made additional charitable donations and we
+      will update this page to let you know how much we are able to donate to
+      the local Food Banks on top of these.
+      <br /><br />
+      We hope that we will be able to welcome you to the normal Didsbury Beer
+      Festival next year.
+    </p>
+    <h4 class="centered bold">Contact us</h4>
+    <p class="centered">
+      For all general enquiries, please email
+      <a href="mailto:emaildbf@gmail.com">emaildbf@gmail.com</a>
+    </p>
+  </div>
+  <div class="row marketing col-md-12" style="padding: 5px; text-align: center">
+    <twitter-widget>
+      <a
+        class="twitter-timeline"
+        data-width="300"
+        data-height="350"
+        data-theme="light"
+        href="https://twitter.com/dbf_beer?ref_src=twsrc%5Etfw"
+        >Tweets by dbf_beer</a
+      >
+      <script
+        async
+        src="https://platform.twitter.com/widgets.js"
+        charset="utf-8"
+      ></script>
+    </twitter-widget>
+    <h4>
+      Press
+      <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"
+        ><i class="fas fa-video"></i
+      ></a>
+      to watch our video, or check out our social offerings
+    </h4>
+    <p style="font-size: 30px">
+      <a href="https://twitter.com/dbf_beer"><i class="fab fa-twitter"></i></a>
+      <a
+        href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"
+        ><i class="fab fa-facebook-f"></i
+      ></a>
+      <a href="https://www.instagram.com/didsburybeerfestival/"
+        ><i class="fab fa-instagram"></i
+      ></a>
+      <a href="http://www.flickr.com/photos/65526946@N08/"
+        ><i class="fab fa-flickr"></i
+      ></a>
+      <a href="http://www.youtube.com/user/Didsburybeerfestival"
+        ><i class="fab fa-youtube"></i
+      ></a>
+    </p>
+  </div>
 </div>
