Add messaging for beer pickup

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,14 @@
 <div class="row marketing col-md-12 rowCountdown">
   <div class="col-md-12">
-    <h4 class="centered bold">Thank You</h4>
+    <h4 class="centered bold">Collection of DBF at Home Beer Boxes.</h4>
     <p class="centered">
-      Thank you for supporting the Didsbury Beer Festival at Home.
+      Collection of DBF at Home Beer Boxes.
       <br /><br />
-      All the beer boxes have now sold out. We are sorry if you have been
-      disappointed and not managed to purchase one.
+      As advised when the orders were made, collection of the beer boxes is ONLY available on either 7th November or 14th November between 11am and 4pm from St Catherine’s Community Centre, School Lane, M20 6HS. 
       <br /><br />
-      We will be preparing the packs over the next week so that they will be
-      ready for collection from St Catherine’s Community Centre, School Lane,
-      Didsbury, M20 6HS between 11am and 4pm on Saturday 7th November and
-      Saturday 14th November.
+      The collection point will be outside the building and if there are others arriving at the same time we ask that you respect social distancing and wear a mask.  Please be ready to quote your order number and if collecting for someone else please bring a copy of their order acknowledgement email. 
       <br /><br />
-      We are grateful to those who made additional charitable donations and we
-      will update this page to let you know how much we are able to donate to
-      the local Food Banks on top of these.
-      <br /><br />
-      We hope that we will be able to welcome you to the normal Didsbury Beer
-      Festival next year.
+      Collection is in line with current Government restrictions:   “Pre-ordered  alcohol can be collected by customers as long as they do not enter the premises.  They must order their drink by a website, phone or text message”.   
     </p>
     <h4 class="centered bold">Contact us</h4>
     <p class="centered">
