Add final dbf 2020 message

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,13 +1,24 @@
 <div class="row marketing col-md-12 rowCountdown">
   <div class="col-md-12">
-    <h4 class="centered bold">Collection of DBF at Home Beer Boxes.</h4>
+    <h4 class="centered bold">Thank You</h4>
     <p class="centered">
-      As advised when the orders were made, collection of the beer boxes is ONLY available on either 7th November or 14th November between 11am and 4pm from St Catherine’s Community Centre, School Lane, M20 6HS. 
-      <br /><br />
-      The collection point will be outside the building and if there are others arriving at the same time we ask that you respect social distancing and wear a mask.  Please be ready to quote your order number and if collecting for someone else please bring a copy of their order acknowledgement email. 
-      <br /><br />
-      Collection is in line with current Government restrictions:   “Pre-ordered  alcohol can be collected by customers as long as they do not enter the premises.  They must order their drink by a website, phone or text message”.   
-    </p>
+      Thank you to everyone who purchased our Didsbury Beer Festival at Home beer boxes.
+      You may be saving the beer for Christmas.  If you couldn’t wait we hope you have enjoyed them.
+    </br></br>
+We were not sure what the demand would be so we only had a limited number of boxes available.  They sold out in 2 weeks! 
+</br></br>
+It was always intention for the surplus from Didsbury Beer Festival at Home to be donated to the local foodbanks.   We are grateful that some buyers also made an additional contribution.
+</br></br>
+So we are very pleased that we will be able to give <span class="bold" style="font-size: 20px;">£2000</span> to Foodbanks in South Manchester. 
+</br></br>
+We hope to see everyone in 2021 at our traditional Didsbury Beer Festival
+</br></br>
+In the meantime you might want to support another beer for charity initiative. 
+</br></br>
+The Good Beer Club have launched the Manchester Craft Beer Selection Box which is made up of 12 beers from local breweries. All the profits from the sale of the boxes will go to two Manchester-based charities:
+</br><span class="bold">FareShare Greater Manchester</span> and <span class="bold">Mustard Tree</span>. 
+</br>
+For more information, head to <a href="https://www.goodbeer.club">www.goodbeer.club</a></p>
     <h4 class="centered bold">Contact us</h4>
     <p class="centered">
       For all general enquiries, please email
