--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,24 +1,9 @@
 <div class="row marketing col-md-12 rowCountdown">
   <div class="col-md-12">
-    <h4 class="centered bold">Thank You</h4>
+    <h4 class="centered bold">Coming soon</h4>
     <p class="centered">
-      Thank you to everyone who purchased our Didsbury Beer Festival at Home beer boxes.
-      You may be saving the beer for Christmas.  If you couldn’t wait we hope you have enjoyed them.
-    </br></br>
-We were not sure what the demand would be so we only had a limited number of boxes available.  They sold out in 2 weeks! 
-</br></br>
-It was always intention for the surplus from Didsbury Beer Festival at Home to be donated to the local foodbanks.   We are grateful that some buyers also made an additional contribution.
-</br></br>
-So we are very pleased that we will be able to give <span class="bold" style="font-size: 20px;">£2000</span> to Foodbanks in South Manchester. 
-</br></br>
-We hope to see everyone in 2021 at our traditional Didsbury Beer Festival
-</br></br>
-In the meantime you might want to support another beer for charity initiative. 
-</br></br>
-The Good Beer Club have launched the Manchester Craft Beer Selection Box which is made up of 12 beers from local breweries. All the profits from the sale of the boxes will go to two Manchester-based charities:
-</br><span class="bold">FareShare Greater Manchester</span> and <span class="bold">Mustard Tree</span>. 
-</br>
-For more information, head to <a href="https://www.goodbeer.club">www.goodbeer.club</a></p>
+        Options are currently being considered for a DBF 2021... Watch this space for more updates!
+    </p>
     <h4 class="centered bold">Contact us</h4>
     <p class="centered">
       For all general enquiries, please email
