--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <h4 class="centered bold">Coming soon</h4>
     <p class="centered">
-        Options are currently being considered for a DBF 2021... Watch this space for more updates - test!
+        Options are currently being considered for a DBF 2021... Watch this space for more updates - test1!
     </p>
     <h4 class="centered bold">Contact us</h4>
     <p class="centered">
